--- a/public/cssK/Register.css
+++ b/public/cssK/Register.css
@@ -43,7 +43,7 @@ body{
     justify-content: center;
     align-items: center;
     min-height: 100vh; */
-    background: url('4282728_oqitDqs.jpg');
+    background: url('price_4.jpg');
     width: 100%;
     background-size: cover;
     height: 100vh;
