--- a/templates/information/home.html.twig
+++ b/templates/information/home.html.twig
@@ -44,19 +44,19 @@
         <div class="banner-item-01" style="	background-image: url(cssK/price_3.jpg);">
           <div class="text-content">
             <h4 style="font-size: 2.5rem;">NVK Store</h4>
-            <h2>Are the hope and bright future of society</h2>
+            <h2>Good product, good price, prestige and quality</h2>
           </div>
         </div>
         <div class="banner-item-02" style="	background-image: url(cssK/price_2.jpg);">
           <div class="text-content">
             <h4 style="font-size: 3rem;">NVK Store</h4>
-            <h2>Are little flames full of talent and creativity</h2>
+            <h2>Good product, good price, prestige and quality</h2>
           </div>
         </div>
         <div class="banner-item-03" style="	background-image: url(cssK/price_1.jpg)">
           <div class="text-content">
             <h4 style="font-size: 3rem;">NVK Store/h4>
-            <h2>Are happy and warm gifts</h2>
+            <h2>Good product, good price, prestige and quality</h2>
           </div>
         </div>
       </div>
