--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -7,7 +7,7 @@
 {% block body %}
 <body>
     <header>
-        <h2 class="logo"> Se Mi </h2>
+        <h2 class="logo">NVK</h2>
             <nav class="navigation">
             <a href="{{path('app_login')}}" class="btnRegister-popup">Login</a>
             </nav>
